<resources>
    <string name="app_name">SignUp-Login-UI</string>
    <string name="don_t_have_any_accont">Don\'t have any accont?</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First name</string>
    <string name="islam_hassan">Islam Hassan</string>
    <string name="hassan">Hassan</string>
    <string name="last_name">Last name</string>
    <string name="eslam_mail_com">eslam@mail.com</string>
    <string name="already_have_any_account">Already have any account?</string>
    <string name="sign_in">sign in</string>
</resources>